Youtube integration with chatbot and login screen fixed on mobile devices

--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -183,6 +183,13 @@ $purple: #7F59A3;
           }
         }
       }
+      .video-card {
+        cursor: pointer;
+        .video-thumbnail{
+          width: 100%!important;
+          max-width: 100%;
+        }
+      }
     }
     .chatbox-footer {
       display: flex;
